--- a/HTMLPages/resultInput.html
+++ b/HTMLPages/resultInput.html
@@ -33,17 +33,16 @@
 
     <!-- Text for the Title and Instructions of the Website -->
     <br>
-    <h1>League Startup Page</h1>
-    <p class="instructions" >Enter the amount of teams (between 2 and 20) and Enter the Type of Tournament wanted</p>
-    <br>
-    <p class="instructions" >Knockout tournaments are only allowed to have 2 , 4, 8 or 16 teams in them</p>
-    <p class="instructions" >Any other amount will be rejected by the system</p>
+    <h1>Results Input Page</h1>
+    <p class="instructions" > First, select the fixture that you want to input the result of</p>
+    <p class="instructions" >Then fill in the inputs for the home and away goals</p>
+    <p class="instructions" >(The home team is the first team in the fixture and the first input for the goals)</p>
     <br>
 
     <!-- The HTML code needed for the form to be submitted on this page-->
     <div></div>
-    <form onSubmit="return formSubmit1()">
-            <input id="teamNmb" type="text" placeholder="Enter amount of teams...">
+    <form onSubmit="return formSubmit3()">
+            <input id="fixture" type="text" placeholder="Enter amount of teams...">
             <select id = "type" name = "type">
                 <option value="roundRobin">Round Robin</option>
                 <option value="knockout">Knockout</option>
@@ -54,7 +53,12 @@
 
     <div class="container"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
     <!-- Code to link the Javascript File to the document -->
     <script src="/JavascriptFiles/script.js"></script>
+    <script src="/JavascriptFiles/script2.js"></script>
+    <script src="/JavascriptFiles/script3.js"></script>
+    <script src="/JavascriptFiles/script4.js"></script>
+    <script src="/JavascriptFiles/teamArray.js"></script>
   </body>
 </html>
